--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,11 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:5.6.5@aar'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
+
     implementation 'com.google.firebase:firebase-database:19.2.1'
-    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
     implementation 'com.google.firebase:firebase-core:17.3.0'
-    apply plugin: 'com.google.gms.google-services'
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
