--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <dist:module dist:instant="true"/>
 
@@ -20,6 +21,10 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
 
+        <service
+                android:name=".LocationService"
+                android:enabled="true"
+                android:exported="true"></service>
 
         <activity
                 android:name=".MainActivity"
