--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_launcher_mountain_marker"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/ic_launcher_mountain_marker_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
@@ -24,10 +24,11 @@
         <service
                 android:name=".LocationService"
                 android:enabled="true"
-                android:exported="true"></service>
+                android:exported="true"/>
 
         <activity
                 android:name=".MainActivity"
+                android:launchMode="singleTask"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:screenOrientation="portrait">
